# LithTech-style-renderer

./: CMakeLists.txt  LICENSE  README.md
engine/: CMakeLists.txt
engine/include/: IRenderer.h
engine/src/: Engine.cpp
game/: CMakeLists.txt
game/include/: DemoScene.h
game/src/: DemoScene.cpp  main.cpp
renderers/OGL4REN/: CMakeLists.txt  RendererOGL4.cpp  RendererOGL4.h  gl.c
renderers/OGL4REN/include/glad/: gl.h
renderers/OGL4REN/shaders/: sprite.frag  sprite.vert
